--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-htmlmin": "^5.0.1",
+        "gulp-if": "^3.0.0",
         "gulp-imagemin": "^7.1.0",
         "gulp-jest": "^4.0.3",
         "gulp-jshint": "^2.1.0",
@@ -48,10 +49,13 @@
         "gulp-minify": "^3.1.0",
         "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^8.0.0",
+        "gulp-remove-logging": "^1.2.0",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.1.0",
         "gulp-sass-lint": "^1.4.0",
         "gulp-sourcemaps": "^2.6.5",
+        "gulp-strip-comments": "^2.5.2",
+        "gulp-strip-debug": "^3.0.0",
         "gulp-uglify": "^3.0.2",
         "gulp-util": "^3.0.8",
         "imagemin-mozjpeg": "^8.0.0",
