--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "babel-preset-es2015": "^6.24.1",
         "browser-sync": "^2.26.7",
         "cssnano": "^4.1.10",
+        "del": "^5.1.0",
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-browserify": "^0.5.1",
@@ -61,6 +62,7 @@
         "imagemin-mozjpeg": "^8.0.0",
         "imagemin-pngquant": "^8.0.0",
         "jshint": "^2.11.0",
-        "rename": "^1.0.4"
+        "rename": "^1.0.4",
+        "vinyl-paths": "^3.0.1"
     }
 }
