--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-browserify": "^0.5.1",
+        "gulp-cache-bust": "^1.4.1",
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-htmlmin": "^5.0.1",
