--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
         "jshint": "^2.11.0",
         "rename": "^1.0.4",
         "vinyl-paths": "^3.0.1"
-    }
+    },
+    "browserlist-doc": "https://github.com/browserslist/browserslist",
+    "browserslist": [
+        "last 2 versions"
+    ]
 }
